Added basic CSS styling

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -6,10 +6,43 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PWP Milestone One</title>
+    <style>
+        body {
+            font-family: Calibri, serif;
+            margin: 0;
+        }
+
+        header {
+            background-color: navy;
+            padding: 1rem;
+            margin: 0;
+            border-bottom: black solid 5px;
+        }
+
+        h1 {
+            text-align: center;
+            color: lightgray;
+            margin: 0;
+        }
+
+        section {
+            margin: 4rem 15rem;
+        }
+
+        ul {
+            list-style: none;
+        }
+
+        li {
+            margin: 0.25em 0;
+        }
+    </style>
 </head>
 <body>
 
-<h1>PWP Milestone One</h1>
+<header>
+    <h1>PWP Milestone One</h1>
+</header>
 
 <section class="purpose-audience-goal">
     <div>
