--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -26,7 +26,7 @@
         }
 
         section {
-            margin: 4rem 15rem;
+            margin: 2rem 25%;
         }
 
         ul {
@@ -48,9 +48,9 @@
     <div>
         <h2>Purpose, Audience, and Goal</h2>
         <ul>
-            <li><strong>Purpose:</strong> </li>
-            <li><strong>Audience:</strong> </li>
-            <li><strong>Goal:</strong> </li>
+            <li><strong>Purpose:</strong> This project will exhibit some information about me and act as a portfolio for my work on web development.</li>
+            <li><strong>Audience:</strong> This site will be targeting prospective employers, clients, and collaborators.</li>
+            <li><strong>Goal:</strong> The goal of this site will be to show my experience and value to those I may work with/for. It will also lay out the best ways to get in contact with me for professional work.</li>
         </ul>
     </div>
 </section>
@@ -59,13 +59,14 @@
     <div>
         <h2>Persona</h2>
         <ul>
-            <li><strong>Name:</strong> </li>
-            <li><strong>Age:</strong> </li>
-            <li><strong>Technology:</strong> </li>
-            <li><strong>Attitudes and Behaviors:</strong> </li>
-            <li><strong>Frustrations and Needs:</strong> </li>
-            <li><strong>Goals:</strong> </li>
-            <li><strong>User Story:</strong> </li>
+            <li><strong>Name:</strong> Emily Davis</li>
+            <li><strong>Age:</strong> 34</li>
+            <li><strong>Profession:</strong> Emily is a project manager for mid-sized tech company. Her responsibilities include overseeing web development projects and recruiting web developers. Emily is very technically savvy and is a power-user. She understands how important it is to find skilled developers who have good time management and deliver high-quality work.</li>
+            <li><strong>Technology:</strong> Dell XPS 13, iMac 24”, iPad Pro, iPhone 14 Pro all using Firefox, Chrome, and Edge</li>
+            <li><strong>Attitudes and Behaviors:</strong> Emily is motivated by the desire to ensure her projects are successful. Meeting client expectations is important to her. She values efficiency and being able to streamline her hiring process. Finding quality developers is integral to the success of her projects.</li>
+            <li><strong>Frustrations and Needs:</strong> Emily is frustrated by time-consuming searches for developers with the right skills. Encountering portfolios with a lack of detailed information about a developer’s skills and past projects. Emily also encounters some developers who have a sluggish response time or are difficult to contact.</li>
+            <li><strong>Goals:</strong> Emily wants to hire skilled developers for her projects. She wants to be able to asses technical skill of prospective candidates by seeing their past work. Also important; she would like an easy way to get in touch with candidates to for further discussion.</li>
+            <li><strong>User Story:</strong> “As a project manager for web developers, it’s important that I can quickly find and assess potential candidates to hire.”</li>
         </ul>
     </div>
 </section>
