Fixed some grammar issues

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -65,7 +65,7 @@
             <li><strong>Technology:</strong> Dell XPS 13, iMac 24”, iPad Pro, iPhone 14 Pro all using Firefox, Chrome, and Edge</li>
             <li><strong>Attitudes and Behaviors:</strong> Emily is motivated by the desire to ensure her projects are successful. Meeting client expectations is important to her. She values efficiency and being able to streamline her hiring process. Finding quality developers is integral to the success of her projects.</li>
             <li><strong>Frustrations and Needs:</strong> Emily is frustrated by time-consuming searches for developers with the right skills. Encountering portfolios with a lack of detailed information about a developer’s skills and past projects. Emily also encounters some developers who have a sluggish response time or are difficult to contact.</li>
-            <li><strong>Goals:</strong> Emily wants to hire skilled developers for her projects. She wants to be able to asses technical skill of prospective candidates by seeing their past work. Also important; she would like an easy way to get in touch with candidates to for further discussion.</li>
+            <li><strong>Goals:</strong> Emily wants to hire skilled developers for her projects. She wants to be able to assess technical skill of prospective candidates by seeing their past work. Also, important; she would like an easy way to get in touch with candidates to for further discussion.</li>
             <li><strong>User Story:</strong> “As a project manager for web developers, it’s important that I can quickly find and assess potential candidates to hire.”</li>
         </ul>
     </div>
