--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -1,42 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PWP Milestone One</title>
-    <style>
-        body {
-            font-family: Calibri, serif;
-            margin: 0;
-        }
-
-        header {
-            background-color: navy;
-            padding: 1rem;
-            margin: 0;
-            border-bottom: black solid 5px;
-        }
-
-        h1 {
-            text-align: center;
-            color: lightgray;
-            margin: 0;
-        }
-
-        section {
-            margin: 2rem 25%;
-        }
-
-        ul {
-            list-style: none;
-        }
-
-        li {
-            margin: 0.25em 0;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
