Added the desktop and mobile wireframes for my PWP

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -25,8 +25,13 @@
 </section>
 
 <section>
-    <div>
-
+    <div class="desktop-wireframe">
+        <h2>Desktop Wireframe</h2>
+        <img src="./images/PWP-desktop-wireframe.png" alt="Wireframe of the desktop version of my PWP">
+    </div>
+    <div class="mobile-wireframe">
+        <h2>Mobile Wireframe</h2>
+        <img src="./images/PWP-mobile-wireframe.png" alt="Wireframe of the mobile version of my PWP">
     </div>
 </section>
 
