Added Tailwind CSS and Flowbite to the project

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -17,9 +17,9 @@
         <h2>Content Strategy</h2>
         <ul>
             <li><strong>Hero Section:</strong> A brief introduction of myself, potentially a photo of myself, and a call-to-action button that moves the page down to my portfolio.</li>
-            <li><strong>About Me:</strong> Personal bio of my background and education. Will also include my basic mission statement of what drives me in my web development experience. A sidebar will be included with a list of my technical skills.</li>
-            <li><strong>Portfolio:</strong> This section will include a project gallery of thumbnails of projects that I’ve worked on. Each project will have a text box underneath that briefly lays out what the project is, the technology used to develop it, and my role in the project.</li>
-            <li><strong>Contact Me:</strong> There will be pertinent links to my career pursuits (LinkedIn, GitHub). Following that will be a mailto link for my e-mail.  Underneath will be a basic contact form.</li>
+            <li><strong>About Me:</strong> Personal bio of my background and education on the left in desktop view. Will also include my basic mission statement of what drives me in my web development experience. A sidebar will be included on the right with a list of my technical skills. For mobile view, these elements will stack.</li>
+            <li><strong>Portfolio:</strong> This section will include a project gallery of thumbnails of projects that I’ve worked on. Each project will have a text box underneath that briefly lays out what the project is, the technology used to develop it, and my role in the project. Each portfolio entry will be listed top to bottom when in mobile view.</li>
+            <li><strong>Contact Me:</strong> In desktop view, there will be a basic contact form on the left. To the right there will be pertinent links to my career pursuits (LinkedIn, GitHub), as well as a mailto link for my e-mail. Mobile view will stack these elements in the order I've mentioned them.</li>
         </ul>
     </div>
 </section>
