Did more formatting on the contact form section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!--HERO SECTION START-->
 <section class="flex flex-col justify-center bg-center bg-no-repeat bg-[url('./images/colorful.jpg')] bg-gray-700 bg-blend-overlay h-screen">
-    <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
+    <div class="px-8 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
         <h1 class="mb-4 text-5xl font-extrabold tracking-tight leading-none text-white md:text-6xl lg:text-8xl">Hey. I'm Evan.</h1>
         <p class="hidden md:block mb-8 text-xl font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Associate Fullstack Dev | Game Enthusiast | Voracious Book Worm</p>
         <p class="md:hidden mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">| Associate Fullstack Dev |<br>| Game Enthusiast |<br>| Voracious Book Worm |</p>
@@ -28,63 +28,41 @@
 
 
 <!--ABOUT ME SECTION START-->
-<div class="grid mb-8 border border-gray-200 rounded-lg shadow-sm md:mb-12 md:grid-cols-2 bg-white">
-    <figure class="flex flex-col items-start justify-center p-8 text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
-        <div class="max-w-2xl mx-[5%] mb-4 text-gray-500">
-            <h2 class="text-lg md:text-2xl font-semibold text-gray-900">About Me</h2>
-            <p class="my-4">I'm an aspiring full-stack developer with a love for creative storytelling and interactive experiences. When I'm not coding, you can find me immersed in the world of games or devouring sci-fi and fantasy novels. As a lifelong learner, I'm driven to merge my technical skills with my creative interests, crafting innovative solutions that bring people joy and excitement. On this website, I'm excited to share my projects, skills, and experiences as I journey towards becoming a skilled full-stack developer. I look forward to collaborating with like-minded individuals who share my passion for technology and creativity.</p>
-        </div>
-        <figcaption class="flex ml-[5%] items-center justify-center">
-            <img class="rounded-full w-20 h-20" src="./images/me.jpg" alt="profile picture">
-            <div class="space-y-0.5 font-medium text-left rtl:text-right ms-3">
-                <div>Evan Bolton</div>
+<section class="grid border border-gray-200 rounded-lg shadow-sm md:grid-cols-2 bg-white">
+    <div class="flex flex-col items-start justify-center px-8 md:px-16 py-16 text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
+        <div class="mx-[5%] mb-4 text-gray-500 text-center md:text-left">
+            <h2 class="text-4xl font-semibold text-gray-900">About Me</h2>
+            <div class="mt-4 flex items-center">
+                <img class="rounded-full w-20 h-20" src="public/images/me.jpg" alt="Picture of Evan Bolton">
+                <div class="space-y-0.5 font-medium text-left rtl:text-right ms-3">
+                    <div>Evan Bolton</div>
+                </div>
             </div>
-        </figcaption>
-    </figure>
-    <figure class="p-8 text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
-        <h2 class="mx-[5%] text-lg md:text-2xl font-semibold text-gray-900">Skills</h2>
-        <div class="grid grid-cols-4 gap-y-4 mt-4 text-center justify-items-center">
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"/>
-                        HTML</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"/>
-                        CSS</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"/>
-                        JavaScript</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg"/>
-                        TypeScript</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original-wordmark.svg"/>
-                        React</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg"/>
-                        express</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original.svg"/>
-                        Next.js</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"/>
-                        GitHub</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg"/>
-                        Tailwind</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg"/>
-                        Python</p>
-            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg"/>
-                        C++</p>
+            <p class="my-4 text-left">I'm an aspiring full-stack developer with a love for creative storytelling and interactive experiences. When I'm not coding, you can find me immersed in the world of games or devouring sci-fi and fantasy novels. As a lifelong learner, I'm driven to merge my technical skills with my creative interests, crafting innovative solutions that bring people joy and excitement. On this website, I'm excited to share my projects, skills, and experiences as I journey towards becoming a skilled full-stack developer. I look forward to collaborating with like-minded individuals who share my passion for technology and creativity.</p>
         </div>
-    </figure>
-</div>
+    </div>
+    <div class="px-8 md:px-16 py-16 text-center md:text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
+        <h2 class="mx-[5%] text-4xl font-semibold text-gray-900">Skills</h2>
+        <div class="grid grid-cols-4 gap-y-4 mt-4 text-center justify-items-center">
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML icon"/>HTML</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS icon"/>CSS</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript icon"/>JavaScript</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" alt="TypeScript icon"/>TypeScript</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original-wordmark.svg" alt="React icon"/>React</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg" alt="Express icon"/>Express</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original.svg" alt="Next.js icon"/>Next.js</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="GitHub icon"/>GitHub</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind icon"/>Tailwind</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" alt="Python icon"/>Python</p>
+            <p class="h-20 w-20 grid justify-items-center"><img class="h-14 w-14" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" alt="C++ icon"/>C++</p>
+        </div>
+    </div>
+</section>
 <!--ABOUT ME SECTION END-->
 
 
 <!--PORTFOLIO SECTION START-->
-<div id="portfolio" class="relative w-full" data-carousel="static">
+<section id="portfolio" class="relative w-full mt-16" data-carousel="static">
     <!-- Carousel wrapper -->
     <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
         <!-- Item 1 -->
@@ -126,46 +104,41 @@
             </span>
         </button>
     </div>
-</div>
+</section>
 <!--PORTFOLIO SECTION END-->
 
 
 <!--CONTACT FORM START-->
-<div>
-    <form>
+<section class="grid mt-16 border border-gray-200 rounded-lg shadow-sm md:mb-12 md:grid-cols-3 bg-white">
+    <form class="flex flex-col col-span-2 justify-center px-8 md:px-16 py-16 md:ml-[5%] text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
         <div class="grid gap-6 mb-6 md:grid-cols-2">
-            <div>
-                <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First name</label>
-                <input type="text" id="first_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="John" required />
+            <div class="md:w-2/3">
+                <label for="name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+                <input type="text" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="John Doe" required />
             </div>
-            <div>
-                <label for="last_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last name</label>
-                <input type="text" id="last_name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Doe" required />
-            </div>
-            <div>
-                <label for="company" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Company</label>
-                <input type="text" id="company" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Flowbite" required />
-            </div>
-            <div>
+            <div class="md:w-2/3">
                 <label for="phone" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone number</label>
-                <input type="tel" id="phone" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="123-45-678" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required />
+                <input type="tel" id="phone" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="123-45-6789" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required />
             </div>
-            <div>
-                <label for="website" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Website URL</label>
-                <input type="url" id="website" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="flowbite.com" required />
+            <div class="md:w-2/3">
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email address</label>
+                <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="john.doe@company.com" required />
             </div>
-            <div>
-                <label for="visitors" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Unique visitors (per month)</label>
-                <input type="number" id="visitors" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" required />
+            <div class="md:w-2/3">
+                <label for="company" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Company</label>
+                <input type="text" id="company" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Flowbite" required />
             </div>
         </div>
         <div class="mb-6">
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email address</label>
-            <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="john.doe@company.com" required />
+            <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your message</label>
+            <textarea id="message" rows="4" class="block p-2.5 w-full md:w-2/3 text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500" placeholder="Write your thoughts here..."></textarea>
         </div>
-        <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+        <button type="submit" class="w-24 text-white border-2 bg-[#7F0116] hover:bg-[#610117] focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 text-center">Submit</button>
     </form>
-</div>
+    <div class="p-8 text-left bg-white border-b border-gray-200 rounded-t-lg md:rounded-t-none md:rounded-ss-lg md:border-e">
+
+    </div>
+</section>
 <!--CONTACT FORM END-->
 
 
